# SynApps

./: .asif-ci  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.asif/: NEXUS-archive.md  NEXUS.md
.github/workflows/: ci.yml
apps/cli/: pyproject.toml
apps/cli/synapps_cli/: config.py  main.py
apps/orchestrator/: db.py  dependencies.py  helpers.py  main.py  migrate_db.py  models.py  openapi.json  pyproject.toml  repositories.py  request_models.py  requirements.txt  setup.py  stores.py
apps/orchestrator/api_keys/: manager.py
apps/orchestrator/middleware/: billing_guard.py  rate_limiter.py
apps/orchestrator/routers/: admin.py  auth.py  collaboration.py  execution.py  flow_config.py  flows.py  marketplace.py  monitoring.py  webhooks.py
apps/orchestrator/tests/: conftest.py  test_2brain_integration.py  test_additional_coverage.py  test_admin_keys.py  test_analytics.py  test_analytics_dashboard.py  test_api_key_manager.py  test_api_versioning.py  test_applets.py  test_async_tasks.py  test_audit_trail.py  test_billing_guard.py  test_code_node_applet.py  test_comprehensive.py  test_connector_health.py  test_consumer_usage.py  test_content_engine_integration.py  (+147 more)
apps/sdk/: pyproject.toml
apps/sdk/synapps/: __init__.py  async_client.py  client.py  models.py
apps/web-frontend/: package-lock.json  package.json
docs/: DEPLOY.md  deployment.md  getting-started.md  openapi.json
docs/templates/: ai-compliance-pipeline.md
infra/docker/: docker-compose.yml
templates/: data_pipeline.yaml  document_processor.yaml  social_media_monitor.yaml
(+197 files in other folders)
