[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synapps-cli"
version = "1.0.0"
description = "SynApps CLI — manage AI workflows from your terminal"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
synapps = "synapps_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synapps_cli*"]
